# test_task_for_ekom

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docker-compose/: app.yaml  storage.yaml
src/: database.py  load_templates.py  main.py  models.py  test_api.py  validators.py
