[tool.poetry]
name = "test-task-for-ekom"
version = "0.1.0"
description = ""
authors = ["ODNA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.20"
fastapi = "^0.115.6"
motor = "^3.6.0"
uvicorn = "^0.32.1"
pytest = "^8.3.4"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"